# ai-music-video-generator

./: .eslintrc.json  .gitignore  README.md  TODO  constants.ts  next.config.js  package-lock.json  package.json  quick-sub.js  relative-sub.js
app/: CaptionsEditor.tsx  SubtitlesEditor.tsx  layout.tsx  page.tsx  styles.ts
app/overdub/: DecibelMonitor.ts  MediaStreamManager.ts  index.d.ts  index.ts  lad.html  mediaDevices.ts  mediaStreamUtils.ts  mediaUtils.ts  page.tsx  useAudioRecorder.ts  useAudioRecorder.tsx  useAudioWaveformRecorder.ts  useAvailableAudioDevices.ts  useAvailableAudioDevices.tsx  useDecibelMonitor.ts  useFfmpeg.ts  useMediaRecorder.ts  useMediaStream.ts  useMediaStreamRecorder.ts  useMicrophonePermissionStatus.ts
app/test/: page.tsx
hooks/: useDebouncedEffect.ts  useLocalStorage.ts  usePrevious.ts
modules/: async.ts  ffmpeg.ts  numbers.ts  openai.ts  strings.ts  suspense.ts  time.ts  video.ts  videoFs.ts  videoFsPath.ts
prompts/: image-maker.txt  story-writer-assistant.txt  story-writer-user.txt  storybook-assistant.txt  trailer-image-creation.txt
prompts/lyric-image/: next-image.txt  system.txt  user-create-image.txt  user-image-describe.txt  user-new-image.txt
public/: globals.css
public/video/: config.json
python/: play.py  record.py  requirements.txt  run.py
remotion/: index.tsx
remotion/Video/: Main.tsx  font.css  hooks.ts  style.ts
rust/: page.html  player.js
rust/rust_audio_player/: Cargo.toml
rust/rust_audio_player/src/: lib.rs
state/: CurrentVideo.ts  Videos.ts
types/: enums.ts  index.d.ts
(+14 files in other folders)
