[package]
name = "media_player"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"

[dependencies.web-sys]
version = "0.3"
features = [
  "AudioContext",
  "AudioBuffer",
  "AudioBufferSourceNode",
  "AudioDestinationNode",
  "Window",
  "Response",
]
